<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ChainFighter</string>
    <string name="start_game">STARTGAME</string>
    <string name="new_game">NEW GAME</string>
    <string name="to_titlescreen">RETURN TO TITLE SCREEN</string>

    <string name="_player">PLAYER</string>
    <string name="_opponent">OPPONENT</string>

    <string name="you_won">YOU WON!</string>
    <string name="opponent_won">OPPONENT WON!</string>

    <string name="move_detail">WHAT JUST HAPPENED?</string>
    <string name="result">RESULT</string>
    <string name="cancel">MOVES CANCEL, NO DAMAGE!</string>
    <string name="opponent_damage">OPPONENT TAKES DAMAGE!</string>
    <string name="player_damage">YOU TAKE DAMAGE!</string>

    <string name="plHP0">YOUR HP IS 0! YOU LOSE!</string>
    <string name="opHP0">OPPONENT HP IS 0! YOU WIN!</string>

    <string name="player_hp">PLAYER HP: 200</string>
    <string name="opponent_hp">OPPONENT HP: 200</string>

    <string name="player_chain">PLAYER CHAIN </string>
    <string name="opponent_chain">OPPONENT CHAIN </string>

    <string name="kick">KICK</string>
    <string name="punch">PUNCH</string>
    <string name="grab">GRAB</string>
    <string name="dodge">DODGE</string>
    <string name="shield">SHIELD</string>

    <string name="player_s_first_move">PLAYER\'S FIRST MOVE</string>
    <string name="player_s_second_move">PLAYER\'S SECOND MOVE</string>
    <string name="player_s_third_move">PLAYER\'S THIRD MOVE</string>

    <string name="opponent_s_first_move">OPPONENT\'S FIRST MOVE</string>
    <string name="opponent_s_second_move">OPPONENT\'S SECOND MOVE</string>
    <string name="opponent_s_third_move">OPPONEN\'S THIRD MOVE</string>
    <string name="first_moves_comparison_results">FIRST MOVES COMPARISON RESULTS</string>
    <string name="second_moves_comparison_results">SECOND MOVES COMPARISON RESULTS</string>
    <string name="third_moves_comparison_results">THIRD MOVES COMPARISON RESULTS</string>
    <string name="someone_won">SOMEONE WON!</string>

    <string name="privacy_policy"><b>Privacy Policy</b>\n\n

LRMota Developer built the ChainFighter APP as a Commercial APP. This APP is provided by LRMota Developer and is intended for use as is.\n

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my APP. The words "ChainFighter" and "APP" are used interchangeably in this page.\n

The terms used in this Privacy Policy are accessible in the ChainFighter mobile game APP.\n
\n
<b>Information Collection and Use</b>\n
\n
This APP does NOT collect user data, Personal Information or any data related to the device on which the APP is running. ChainFighter does NOT require the user to enter personal information in order to access and use the APP. The APP does not store user data or Personal Information when it has been installed on the device, when it is running on the device, when the APP is running in the background, when the APP has been closed nor when it has been uninstalled from the device.\n

The APP does NOT use third-party services that are typically used to collect information used to identify you.\n
\n
<b>Log Data</b>\n
\n
I want to inform you that whenever you use my APP, in a case of an error in the APP, I do NOT collect data nor information (usuall y through third-party products) on your phone, otherwise called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the APP when utilizing my Service, the time and date of your use of the Service, and other statistics. Instead, please reach lrmotadev@gmail.com and provide a description of the error or bug, or whenever possible, share the Log Data if you have access to it.\n
\n
<b>Cookies</b>\n
\n
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. The APP does NOT generate, use or collect cookies.\n

ChainFighter does not use these “cookies” explicitly. However, the APP may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this APP.\n
\n
<b>Security</b>\n
\n
I value your trust in allowing ChainFightert to be installed and to run on your phone. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.\n
\n
<b>Children’s Privacy</b>\n
\n
This APP does not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I will immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to proceed with the necessary actions.\n
\n
<b>Changes to This Privacy Policy</b>\n
\n
I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.\n

This policy is effective as of 2023-07-06
\n
<b>Contact Me </b>\n
\n
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at lrmotadev@gmail.com.</string>
    <string name="view_privacy_policy_online">View Privacy Policy Online</string>
    <string name="to_privacy_policy">Privacy Policy</string>

</resources>